# NeuriCo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: docker-publish.yml
config/: domains.yaml  workspace.yaml.example
docker/: Dockerfile  entrypoint.sh  run.sh
src/: __version__.py
src/agents/: resource_finder.py
src/cli/: fetch_from_ideahub.py
src/core/: config_loader.py  github_manager.py  retry.py  runner.py
templates/: research_agent_instructions.py
templates/agents/domains/finance/: paper_writer.txt  resource_finder.txt  session_instructions.txt
templates/base/: researcher.txt
templates/domains/artificial_intelligence/: core.txt
templates/domains/battery/: core.txt  resource_finder.txt  session_instructions.txt
templates/domains/finance/: core.txt
templates/domains/machine_learning/: core.txt
templates/paper_styles/finance/: example_paper.tex  style_config.yaml
tests/: conftest.py  test_config_loader.py  test_idea_manager.py  test_pipeline_orchestrator_integration.py  test_pipeline_state.py  test_retry.py  test_security.py
